Rename Aspire.Hosting to Aspire.Hosting.AppHost and Aspire.Hosting.Core to Aspire.Hosting (#2937)
* Rename Aspire.Hosting to Aspire.Hosting.AppHost

Rename Aspire.Hosting.Core back to Aspire.Hosting.

* Rename MSBuild props and targets

* Fix up project references

* Fix project templates for new name.

* fix MSBuild test

* Fix EndToEnd tests

--- a/src/Aspire.Hosting.AWS/Aspire.Hosting.AWS.csproj
+++ b/src/Aspire.Hosting.AWS/Aspire.Hosting.AWS.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aspire.Hosting.Core\Aspire.Hosting.Core.csproj" />
+    <ProjectReference Include="..\Aspire.Hosting\Aspire.Hosting.csproj" />
     <PackageReference Include="AWSSDK.Core" />
     <PackageReference Include="AWSSDK.CloudFormation" />
   </ItemGroup>
