--- a/playground/AWS/AWS.AppHost/AWS.AppHost.csproj
+++ b/playground/AWS/AWS.AppHost/AWS.AppHost.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Aspire.Dashboard\Aspire.Dashboard.csproj" />
     <ProjectReference Include="..\..\..\src\Aspire.Hosting.AWS\Aspire.Hosting.AWS.csproj" IsAspireProjectResource="false" />    
-    <ProjectReference Include="..\..\..\src\Aspire.Hosting\Aspire.Hosting.csproj" IsAspireProjectResource="false" />
+    <ProjectReference Include="..\..\..\src\Aspire.Hosting.AppHost\Aspire.Hosting.AppHost.csproj" IsAspireProjectResource="false" />
     
     <ProjectReference Include="..\Frontend\Frontend.csproj" />
   </ItemGroup>
