--- a/playground/AWS/AWS.AppHost/aspire-manifest.json
+++ b/playground/AWS/AWS.AppHost/aspire-manifest.json
@@ -6,7 +6,7 @@
       "template-path": "app-resources.template",
       "references": [
         {
-          "TargetResource": "Frontend"
+          "target-resource": "Frontend"
         }
       ]
     },
@@ -16,7 +16,8 @@
       "env": {
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
-        "ChatTopicArnEnv": "{AspireSampleDevResources.aws.cloudformation.output.ChatTopicArn}"
+        "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
+        "ChatTopicArnEnv": "{AspireSampleDevResources.output.ChatTopicArn}"
       },
       "bindings": {
         "http": {
