Uses new Azure.Provisioning packages which have been split by resource (#3383)

--- a/playground/AWS/AWS.AppHost/Properties/launchSettings.json
+++ b/playground/AWS/AWS.AppHost/Properties/launchSettings.json
@@ -26,7 +26,7 @@
         "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
       }
     },
-    "manifest-publish": {
+    "generate-manifest": {
       "commandName": "Project",
       "commandLineArgs": "--publisher manifest --output-path ./aspire-manifest.json",
       "dotnetRunMessages": true,
