--- a/playground/AWS/AWS.AppHost/aspire-manifest.json
+++ b/playground/AWS/AWS.AppHost/aspire-manifest.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/aspire-8.0.json",
   "resources": {
     "AspireSampleDevResources": {
       "type": "aws.cloudformation.template.v0",
