--- a/playground/AWS/AWS.AppHost/AWS.AppHost.csproj
+++ b/playground/AWS/AWS.AppHost/AWS.AppHost.csproj
@@ -9,14 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="$(SharedDir)KnownResourceNames.cs" Link="KnownResourceNames.cs" />
+    <Compile Include="..\..\KnownResourceNames.cs" Link="KnownResourceNames.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Aspire.Dashboard\Aspire.Dashboard.csproj" />
-    <ProjectReference Include="..\..\..\src\Aspire.Hosting.AWS\Aspire.Hosting.AWS.csproj" IsAspireProjectResource="false" />    
-    <ProjectReference Include="..\..\..\src\Aspire.Hosting.AppHost\Aspire.Hosting.AppHost.csproj" IsAspireProjectResource="false" />
-    
+    <AspireProjectOrPackageReference Include="Aspire.Hosting.AWS" />
+    <AspireProjectOrPackageReference Include="Aspire.Hosting.AppHost" />
+
     <ProjectReference Include="..\Frontend\Frontend.csproj" />
   </ItemGroup>
 
