--- a/playground/AWS/AWS.AppHost/app-resources.template
+++ b/playground/AWS/AWS.AppHost/app-resources.template
@@ -3,7 +3,7 @@
     "Parameters" : {
         "DefaultVisibilityTimeout" : {
             "Type" : "Number",
-            "Description" : "The default visiblity timeout for messages in SQS queue."
+            "Description" : "The default visibility timeout for messages in SQS queue."
         }
     },
     "Resources" : {
