--- a/src/Aspire.Hosting.AWS/Aspire.Hosting.AWS.csproj
+++ b/src/Aspire.Hosting.AWS/Aspire.Hosting.AWS.csproj
@@ -5,7 +5,7 @@
     <IsPackable>true</IsPackable>
     <!-- This library needs more bake time until it can ship stable. -->
     <SuppressFinalPackageVersion>true</SuppressFinalPackageVersion>
-    <PackageTags>aspire hosting aws</PackageTags>
+    <PackageTags>aspire integration hosting aws</PackageTags>
     <Description>Add support for provisioning AWS application resources and configuring the AWS SDK for .NET.</Description>
     <!-- This package hasn't shipped stable, so package validation runs against previously shipped version of it. -->
     <PackageValidationBaselineVersion>8.0.1-preview.8.24267.1</PackageValidationBaselineVersion>
