Get tests building and passing cleanly.
Copy the following from dotnet/aspire:
- Utf8JsonWriterExtensions.TryWriteString
- The JSON schema file aspire-8.0.json
- Parts of ManifestUtils, and use reflection to invoke an internal method in Aspire.Hosting.

Set up props, .gitignore and nuget.config.

--- a/tests/Aspire.Hosting.AWS.Tests/Aspire.Hosting.AWS.Tests.csproj
+++ b/tests/Aspire.Hosting.AWS.Tests/Aspire.Hosting.AWS.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
     <NoWarn>$(NoWarn);CS8002</NoWarn> <!-- AWS CDK packages are not signed -->
@@ -6,7 +6,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Aspire.Hosting.AWS\Aspire.Hosting.AWS.csproj" />
-    <ProjectReference Include="..\Aspire.Hosting.Tests\Aspire.Hosting.Tests.csproj" />
+
+    <PackageReference Include="JsonSchema.Net" />
+
+    <Content Include="Schema\aspire-8.0.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
