--- a/playground/AWS/AWS.ServiceDefaults/AWS.ServiceDefaults.csproj
+++ b/playground/AWS/AWS.ServiceDefaults/AWS.ServiceDefaults.csproj
@@ -11,17 +11,12 @@
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AWS" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />
 
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
-
-    <PackageReference Include="OpenTelemetry.Instrumentation.AWS" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AspireProjectOrPackageReference Include="Microsoft.Extensions.ServiceDiscovery.Dns" />
-    <AspireProjectOrPackageReference Include="Microsoft.Extensions.ServiceDiscovery" />
+    <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Dns" />
   </ItemGroup>
 
 </Project>
