--- a/playground/AWS/AWSCDK.AppHost/AWSCDK.AppHost.csproj
+++ b/playground/AWS/AWSCDK.AppHost/AWSCDK.AppHost.csproj
@@ -1,21 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0-rc.1.24511.1" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
     <IsAspireHost>true</IsAspireHost>
     <NoWarn>$(NoWarn);CS8002</NoWarn> <!-- AWS CDK packages are not signed -->
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\KnownResourceNames.cs" Link="KnownResourceNames.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AspireProjectOrPackageReference Include="Aspire.Hosting.AWS" />
-    <AspireProjectOrPackageReference Include="Aspire.Hosting.AppHost" />
+    <ProjectReference Include="..\..\..\src\Aspire.Hosting.AWS\Aspire.Hosting.AWS.csproj" IsAspireProjectResource="false" />
+    <PackageReference Include="Aspire.Hosting.AppHost" />
 
     <ProjectReference Include="..\Frontend\Frontend.csproj" />
   </ItemGroup>
