--- a/playground/AWS/AWSCDK.AppHost/Properties/launchSettings.json
+++ b/playground/AWS/AWSCDK.AppHost/Properties/launchSettings.json
@@ -9,7 +9,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16175",
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16175",
         "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:17037"
       }
     },
