--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,7 +14,9 @@
 
     <!-- AWS SDK for .NET dependencies -->
     <PackageVersion Include="AWSSDK.CloudFormation" Version="3.7.400.36" />
+    <PackageVersion Include="AWSSDK.S3" Version="3.7.400.5" />
     <PackageVersion Include="AWSSDK.SQS" Version="3.7.400.36" />
+    <PackageVersion Include="AWSSDK.SecurityToken" Version="3.7.400.36" />
     <PackageVersion Include="AWSSDK.SimpleNotificationService" Version="3.7.400.36" />
     <PackageVersion Include="AWSSDK.Core" Version="3.7.400.36" />
     <PackageVersion Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
