--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -3,6 +3,8 @@
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)..\public.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
